lambda: analyze counterexamples exhaustively
closes #144